src/main/java/com/example/zavodliva/user/errors/InvalidPasswordException.java
package com.example.zavodliva.user.errors;

public class InvalidPasswordException extends RuntimeException {

	public InvalidPasswordException(String message) {
		super(message);
		
	}

}
